--- a/styles-yz.css
+++ b/styles-yz.css
@@ -106,7 +106,7 @@ a {
   background-color: #ffffffd8;
 }
 
-.funky {
+.campy {
   color: #ec5242;
   border: 2px solid #ec5242;
   padding: 8px;
@@ -243,7 +243,7 @@ a {
   margin: 50px 0;
 }
 
-.brandlogos img {
+.brand-logos img {
   width: 100px;
 }
 
@@ -261,7 +261,7 @@ a {
   text-align: center;
 }
 
-.divisionline1 {
+.divisionline10 {
   width: 100px;
   margin: auto;
   border: 1px solid #ec5242;
@@ -276,7 +276,7 @@ a {
   padding: 50px 0 10px 0;
 }
 
-.brandlogos {
+.brand-logos {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
@@ -301,7 +301,7 @@ a {
     cursor: pointer;
   }
 
-  .verytop {
+  .vtop {
     display: flex;
     background-color: #272a31;
     height: 25px;
@@ -309,14 +309,14 @@ a {
     justify-content: end;
   }
 
-  .vta {
+  .vvta {
     font-family: "Lato", sans-serif;
     font-size: 12px;
     color: #fff;
     padding-right: 40px;
   }
 
-  .vtoplogo {
+  .vvtoplogo {
     height: 15px;
     padding-right: 25px;
   }
@@ -429,7 +429,7 @@ a {
     text-align: center;
   }
 
-  .divisionline1 {
+  .divisionline10 {
     width: 100px;
     margin: auto;
   }
@@ -443,14 +443,14 @@ a {
     padding: 50px 0 10px 0;
   }
 
-  .brandlogos {
+  .brand-logos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
     padding: 45px 0 60px 0;
   }
 
-  .brandlogos img {
+  .brand-logos img {
     width: 200px;
   }
 
