--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 
 /* nav bar */
 
-.verytop {
+.vtop {
   display: none;
 }
 
@@ -106,7 +106,7 @@ a {
   background-color: #ffffffd8;
 }
 
-.funky {
+.campy {
   color: #ec5242;
   border: 2px solid #ec5242;
   padding: 8px;
@@ -175,7 +175,7 @@ a {
   padding: 50px 0 10px 0;
 }
 
-.divisionline1 {
+.divisionline10 {
   border: 1px solid #ec5242;
   width: 100px;
   margin: auto;
@@ -234,7 +234,7 @@ a {
 
 /* speakers */
 
-.mainspeakers h2 {
+.mains-peakers h2 {
   margin: 50px 0 10px 0;
   text-align: center;
   font-family: "Lato", sans-serif;
@@ -242,7 +242,7 @@ a {
   font-size: 25px;
 }
 
-.cardscontainer {
+.cards-container {
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
@@ -251,7 +251,7 @@ a {
   margin-top: 50px;
 }
 
-.cardscontainer li {
+.cards-container li {
   display: flex;
 }
 
@@ -333,14 +333,14 @@ a {
   padding: 50px 0 10px 0;
 }
 
-.brandlogos {
+.brand-logos {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   padding: 45px 0 60px 0;
 }
 
-.brandlogos img {
+.brand-logos img {
   width: 100px;
 }
 
@@ -367,7 +367,7 @@ a {
     cursor: pointer;
   }
 
-  .verytop {
+  .vtop {
     display: flex;
     background-color: #272a31;
     height: 25px;
@@ -375,14 +375,14 @@ a {
     justify-content: end;
   }
 
-  .vta {
+  .vvta {
     font-family: "Lato", sans-serif;
     font-size: 12px;
     color: #fff;
     padding-right: 40px;
   }
 
-  .vtoplogo {
+  .vvtoplogo {
     height: 15px;
     padding-right: 25px;
   }
@@ -487,7 +487,7 @@ a {
     padding: 50px 0 10px 0;
   }
 
-  .divisionline1 {
+  .divisionline10 {
     border: 1px solid #ec5242;
     width: 100px;
     margin: auto;
@@ -562,14 +562,14 @@ a {
     padding: 50px 0 10px 0;
   }
 
-  .brandlogos {
+  .brand-logos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
     padding: 45px 0 60px 0;
   }
 
-  .brandlogos img {
+  .brand-logos img {
     width: 200px;
   }
 }
